--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Server =localhost;Port=5432;Database=CatalogeDb;User Id=postgres;Include Error Detail=true"
+    "Database": "Server =localhost;Port=5432;Database=CatalogeDb;User Id=postgres;Password=postgres;Include Error Detail=true"
   },
   "Logging": {
     "LogLevel": {
