--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -25,7 +25,12 @@ services:
     volumes:
         - postgres_basket:/var/lib/postgresql
       
-      
+  distributedcache:
+    container_name: distributedcache
+    restart: always
+    ports:
+      - "6379:6379"
+
   catalog.api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
