Entity Framework Core and SQLite Database Connection in Discount Microservice

--- a/src/Services/Discount/Discount.Grpc/appsettings.json
+++ b/src/Services/Discount/Discount.Grpc/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "Database": "Data Source=discountdb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
