Setup SQL Server DB using Docker-compose file for Multi-container Docker Env

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -9,6 +9,9 @@ services:
 
   distributedcache:
     image: redis
+    
+  orderdb:
+    image: mcr.microsoft.com/mssql/server:2022-latest
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
