--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -12,6 +12,9 @@ services:
     
   orderdb:
     image: mcr.microsoft.com/mssql/server:2022-latest
+    
+  messagebroker:
+    image: rabbitmq:management
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
