--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -34,21 +34,21 @@
       "catalog-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://catalog.api:6000"
+            "Address": "http://localhost:6000/"
           }
         }
       },
       "basket-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://basket.api:6001"
+            "Address": "http://localhost:6001/"
           }
         }
       },
       "ordering-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://ordering.api:6003"
+            "Address": "http://localhost:6003/"
           }
         }
       }
