Containerize and Orchestrate YarpApiGateway Microservice for Reverse Proxy

--- a/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
+++ b/src/ApiGateways/YarpApiGateway/YarpApiGateway.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>6c31e4db-4f25-465c-915c-c75353343bc9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
