--- a/src/WebApps/Shopping.Web/Shopping.Web.csproj
+++ b/src/WebApps/Shopping.Web/Shopping.Web.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>54f403d0-3f97-4d7f-b2bd-6a785129c2b9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
